    - update debian/patches/browser_branding.patch

  [ Alexander Sack <asac@ubuntu.com> ]
  * add ubuntu code to preferences for yahoo searchplugin
    - update debian/firefox.js
  * fix gnome integration systempath patch in such a way that it properly
    refers to "abrowser" and not awesome-browser
    - update debian/patches/lp185622_system_path_default_browser.patch

 -- Fabien Tassin <fta@ubuntu.com>  Wed, 08 Oct 2008 23:54:07 +0200

firefox-3.0 (3.0.3+build1+nobinonly-0ubuntu1) intrepid; urgency=low

  new regression fix release (v3.0.3 build1)
    - see USN-645-3
  * fixes LP: #270429: [MASTER] passwords lost from 3.0.1 to 3.0.2
  * improve about:rights wording slightly to read "... offers optional
    web site ..." while previously it read "... uses web sitweb sitee ...";
    thanks to PJ for the initial suggestion
    - update debian/patches/lp269656_know_your_rights.patch

 -- Alexander Sack <asac@ubuntu.com>  Thu, 25 Sep 2008 12:01:59 +0200

firefox-3.0 (3.0.2+build6+nobinonly-0ubuntu2) intrepid; urgency=low

  * fix LP: #273907 - abrowser does not start: :$pkglibdir/abrowser link
    missing; we introduce the proper link in the firefox-3.0 package
    - update debian/rules
  * fix LP: #269795 - abrowser shouldn't display the EULA; we fix this by
    using brand.properties to determine whether we have official branding or
    not. In turn the about:rights notification only gets displayed when
    official build is running.
    - update debian/patches/lp269656_know_your_rights.patch
  * fix LP: #206191 - Firefox 3 "set as Desktop background" does not work
    properly; we cherry-pick latest upstream patch from bugzilla
    - add debian/patches/bz421977_att334578.patch
    - update debian/patches/series

 -- Alexander Sack <asac@ubuntu.com>  Wed, 24 Sep 2008 18:48:23 +0200

firefox-3.0 (3.0.2+build6+nobinonly-0ubuntu1) intrepid; urgency=low

  Security/Stability update (v3.0.2 build6)
    - see USN-645-1

  [ Fabien Tassin <fta@ubuntu.com> ]