@@ -28,6 +28,8 @@ firefox-3.0 (3.0.3+nobinonly-0ubuntu1) UNRELEASED; urgency=low
   * fix gnome integration systempath patch in such a way that it properly
     refers to "abrowser" and not awesome-browser
     - update debian/patches/lp185622_system_path_default_browser.patch
+  * update aboutRights.xhtml to v1
+    - update debian/patches/lp269656_know_your_rights.patch
 
  -- Fabien Tassin <fta@ubuntu.com>  Wed, 08 Oct 2008 23:54:07 +0200
 
